feat(setup): add a uninstall route (#21)